--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,20 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "formal-cloud"
-version = "0.1.4"
+version = "0.1.5"
 description = "Formal checks for cloud infrastructure and policy-as-code compliance"
 readme = "README.md"
 requires-python = ">=3.10"
+license = { text = "Apache-2.0" }
 authors = [
   { name = "formal-cloud" }
 ]
 dependencies = []
+
+[project.urls]
+Homepage = "https://github.com/ulamai/formalcloud"
+Repository = "https://github.com/ulamai/formalcloud"
+Issues = "https://github.com/ulamai/formalcloud/issues"
 
 [project.optional-dependencies]
 dev = []
